swagger and validation
