# src/controllers/inventories.controllers.js
@@ -1,9 +1,11 @@
 const express = require('express');
 const srvFn = require('../services/inventories.services');
-const { body, validationResult } = require('express-validator');
+const ObjectId = require('mongodb').ObjectId;
+// const { body, validationResult } = require('express-validator');
 
 
 const getAllInventories = async (req, res) => {
+    //#swagger.tags=['Inventories']
     try {
         let iData = {};
         const response = await srvFn.getInventories(iData);
@@ -16,6 +18,7 @@ const getAllInventories = async (req, res) => {
 
 
 const getInventoryById = async (req, res) => {
+    //#swagger.tags=['Inventories']
     try {
         let iData = {
             _id: req.params.id
@@ -30,26 +33,21 @@ const getInventoryById = async (req, res) => {
 
 
 const createNewInventory = async (req, res) => {
-    try {
-        let iData = req.body;
-        body('item').exists().isLength({ min: 5}).withMessage('must be at least 5 chars long.')
-        body('category').exists().isLength({ min: 7}).withMessage('must be at least 7 chars long.')
-        body('comments').isString().withMessage('must be a valid comment.')
-        body('description').exists().not().isEmpty().withMessage('must contain an item description.')
-        body('discontinued').exists().isBoolean().withMessage('must be true/false.')
-        body('location').exists().not().isEmpty().withMessage('must contain an address.')
-        body('manufacture').exists().not().isEmpty().withMessage('must contain a manufacture name.')
-        body('stock_level').exists().isNumeric().withMessage('must be a valid number.')
-        body('supplier').exists().not().isEmpty().withMessage('must contain a supplier name.')
+    //#swagger.tags=['Inventories']
+    try {        
+        const iData = {
+            item: req.body.item,
+            category: req.body.category,
+            comments: req.body.comments,
+            description: req.body.description,
+            discontinued: req.body.discontinued,
+            location: req.body.location,
+            manufacture: req.body.manufacture,
+            stock_level: req.body.stock_level,
+            supplier: req.body.supplier
+        };
         
-        
-        const errors = validationResult(req);
-        if (!errors.isEmpty()) {
-            return res.status(400).json({ errors: errors.array() });
-        }
-
-
-        const response = await srvFn.createInventory(iData);        
+        const response = await srvFn.createInventory(iData);
         if (response.error) { return res.status(404).json(response)}
         return res.json(response)
     } catch (err) {
@@ -59,18 +57,25 @@ const createNewInventory = async (req, res) => {
 
 
 const modifyInventoryById = async (req, res) => {
+    //#swagger.tags=['Inventories']
     try {
-        let iData = {
-            _id: req.params.id
+        //validation of the id
+        if (!ObjectId.isValid(req.params.id)) {
+            res.status(400).json('Must use a valid book id to update a book.');
+        }
+        const inventoryId = new ObjectId(req.params.id);
+        const iData = {
+            item: req.body.item,
+            category: req.body.category,
+            comments: req.body.comments,
+            description: req.body.description,
+            discontinued: req.body.discontinued,
+            location: req.body.location,
+            manufacture: req.body.manufacture,
+            stock_level: req.body.stock_level,
+            supplier: req.body.supplier
         };
-        const user = {
-            firstName: req.body.firstName,
-            lastName: req.body.lastName,
-            email: req.body.email,
-            favoriteColor: req.body.favoriteColor,
-            birthday: req.body.birthday
-        };
-        const response = await srvFn.modifyInventory(iData, user);
+        const response = await srvFn.modifyInventory(inventoryId, iData);
         if (response.error) { return res.status(404).json(response)}
         return res.json(response)
     } catch (err) {
@@ -80,6 +85,7 @@ const modifyInventoryById = async (req, res) => {
 
 
 const deleteInventoryById = async (req, res) => {
+    //#swagger.tags=['Inventories']
     try {
         let iData = {
             _id: req.params.id
