# src/routes/index.js
@@ -1,7 +1,8 @@
 const router = require('express').Router();
+router.use('/', require('./swagger'));
 
-router.get('/', (req, res) => {
-    res.send('My Inventory and Suppliers');
-});
+router.use("/inventories", require('./inventories.route'));
+router.use("/suppliers", require('./suppliers.route'));
+
 
 module.exports = router;
