# src/server.js
@@ -7,7 +7,8 @@ const supplierRoute = require('./routes/suppliers.route');
 
 const app = express();
 const options = {
-    origin: '*'
+    origin: '*',
+    methods: ['GET', 'POST', 'DELETE', 'UPDATE', 'PUT', 'PATCH']
 };
 
 console.log("Running Environment: ", environment.ENV.toUpperCase());
@@ -15,8 +16,8 @@ console.log("Running Environment: ", environment.ENV.toUpperCase());
 app.use(cors(options))
 app.use(express.json());
 app.use(express.urlencoded({extended: true}));
-app.use('/apis/inventory/', require('./routes/inventories.route'));
-app.use('/apis/supplier/', require('./routes/suppliers.route'));
+// app.use('/apis/inventory/', require('./routes/inventories.route'));
+// app.use('/apis/supplier/', require('./routes/suppliers.route'));
 app.use('/', require('./routes/index'));
 app.use(bodyParser.json());
 
